--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,9 @@
       2. Grid
       3. Header
       4. Main Hero Image
-      5. Why Couples Resort
-      6. About & FAQ
-      7. Contact Form
-      8. Footer
+      5. Comtact us
+      6. Product contents
+      7. Footer
   */
 
 
@@ -43,6 +42,12 @@ body {
       background-color: white;
 }
 
+.box-color {
+      color: #fff;
+      text-align: center;
+      background-color: #4E4E4E;}
+
+
 
   /* 2. ---Grid--- */
 
@@ -61,7 +66,6 @@ body {
 
 header {
       position: sticky;
-      display: grid;
       grid-column: 1/-1;
       height: 200px;
       background-color: #9C9C9C;
@@ -69,22 +73,45 @@ header {
       font-size: 23px;
 }
 
+#top-nav {
+      grid-column: 1/-1;
+      display: inline-grid;
+}
 
-#top-nav-L{
+#top-nav-L li{
       grid-column: 1/5;
+      margin-right: 82px;
+      display: inline;
+      margin-top: 150px;
 }
 
-#top-nav-R {
-      display: flex;
-      align-items: baseline;
-      justify-content: space-between;
+#top-nav-R li{
+      grid-column: 9/-1;
+      margin-right: 82px;
+      display: inline;
+      margin-top: 150px;
 }
+.nav li {
+      margin-top: 150px;}
 
 #main-logo {
-      width: 250px;
-      height: 150px;
-      background-color: #4E4E4E;
+      width: 260px;
+      height: 160px;
 
-      grid-column: 7/9;
+      grid-column: 6/9;
 }
 
+
+/* 4. Main Hero Image */
+
+main {background: #E1E1E1;}
+
+#hero-2 {
+      width: 960px;
+      height: 880px;
+      background-color: #C8C8C8;
+      grid-column: 8/-1;
+}
+/* 5. Comtact us */
+/* 6. Product contents */
+/* 7. Footer */
