--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
       margin: 0;
       padding: 0;
       color: #626262;
-      font-family: 'Sanchez', 'Times New Roman', serif;
+      font-family: 'Ubuntu', serif;
       font-weight: normal;
       font-size: 14px;
 }
@@ -73,45 +73,235 @@ header {
       font-size: 23px;
 }
 
-#top-nav {
+#top-nav ul{
       grid-column: 1/-1;
-      display: inline-grid;
 }
 
 #top-nav-L li{
-      grid-column: 1/5;
-      margin-right: 82px;
       display: inline;
-      margin-top: 150px;
+
+      margin-right: 80px;
 }
 
-#top-nav-R li{
-      grid-column: 9/-1;
-      margin-right: 82px;
-      display: inline;
-      margin-top: 150px;
-}
-.nav li {
-      margin-top: 150px;}
 
-#main-logo {
+.logo {
       width: 260px;
       height: 160px;
-
-      grid-column: 6/9;
 }
+
+#main-logo {
+      grid-column: 6/8;
+
+      margin-top: 0;
+}
+
+#top-nav-R {      
+      grid-column: 9/-1;}
+
+#top-nav-R li {
+      margin-right: 82px;
+      display: inline;
+}
+
 
 
 /* 4. Main Hero Image */
 
-main {background: #E1E1E1;}
+main {
+      background: #E1E1E1;
+      padding-bottom: 50px;
+}
+
+.hero-img {
+      margin-top: 0;
+}
+
+#hero-text {
+      font-size: 85px;
+      font-family: 'ubuntu',sans-serif;
+      font-weight: 400;
+      font-style: normal;
+
+      margin-top: 130px;
+      margin-left: 20px;
+      grid-column: 1/6;
+}
 
 #hero-2 {
       width: 960px;
       height: 880px;
       background-color: #C8C8C8;
-      grid-column: 8/-1;
+      margin-left: 560%;
+
+      font-size: 70px;
+      text-align: center;
 }
+
+#hero-2 h5 {
+      margin: 350px auto;
+}
+
+
+
 /* 5. Comtact us */
+
+#contact-img{
+      width: 100%;
+      height: 623px;
+      background-color: #5A5A5A;
+      grid-column: 1/-1;
+
+      font-size: 70px;
+}
+
+#contact-img h4 {
+      margin-top: 300px;
+}
+
+#contact-text {
+      grid-column: 1/-1;
+      background-color: #9C9C9C;
+
+      font-size: 33px;
+      color: #ffffff;
+      text-align: center; 
+      line-height: 35px;
+
+      padding:125px 280px;
+      padding-bottom: 150px;
+}
+
+.button {
+      grid-column: 6/8;
+      background-color: #E1E1E1;
+      width: 260px;
+      height: 80px;
+
+      margin-top: 80px;
+      margin-left: 38%;
+      padding-top: 20px;
+
+      border-radius: 25px;
+}
+
+
+
 /* 6. Product contents */
+
+
+#product-con-img {
+      width: 1088px;
+      height: 625px;
+
+      grid-column: 3/11;
+
+      margin-top: 88px;
+      margin-bottom: 30px;
+      font-size: 70px;
+}
+
+#product-con-img h4 {
+      margin-top: 250px;
+}
+
+#product-con-text {
+      grid-row: 2/3;
+      grid-column: 3/11;
+
+      font-size: 33px;
+      line-height: 38px;
+      text-align: center;
+}
+
+#product-con-text h4 {      
+      font-weight: 700;
+      font-size: 50px;
+
+      margin-top: 26px;
+}
+
+.product-descrip {
+      display: flex;
+
+      margin-top: 40px;
+}
+
+.product-box {
+      width: 536px;
+      height: 940px;
+
+      background-color: #fff;
+
+      border-radius: 60px 60px 0 0;
+      text-align: center;
+
+}
+
+.product-img {
+      width: 390px;
+      height: 500px; 
+
+      margin: 100px auto;
+      margin-bottom: 26px;
+}
+
+
+.product-box h4 {
+      font-weight: 700;
+      font-size: 30px;
+
+      background-color: #9C9C9C;
+      color: #E1E1E1;
+
+      margin: 0 100px 26px 100px;
+}
+
+.product-box p {
+      padding-left: 100px;
+      padding-right: 100px;
+
+      font-size: 30px;
+}
+
 /* 7. Footer */
+
+footer {
+      background-color: #9C9C9C;
+      height: 400px;
+}
+
+#footer-logo {
+      margin-top: 120px;
+      font-size: 30px;
+}
+
+.logo h4 {
+      margin-top: 40px;
+}
+
+#main-footer h5 {
+      font-size: 40px;
+      color: #fff;
+      grid-column: 3/6;
+      margin-top: 140px;
+      margin-left: 70px;
+}
+
+#footer-nav {
+      grid-column: 7/-1;
+}
+
+#footer-nav li {
+      display: inline-block;
+      margin-right: 150px;
+      margin-top: 145px;
+
+      font-size: 27px;
+      color: #fff;
+}
+#footer-nav li:first-child {
+      margin-left: 40px;
+}
+#footer-nav li:last-child {
+      margin-right: 0;
+}
