--- a/css/main-mobile.css
+++ b/css/main-mobile.css
@@ -172,13 +172,13 @@ main {
 
 }
 
-#contact-button {
+.button-1 {
     grid-column: 2/3;
-    background-color: #E1E1E1;
+    background-color: #606060;
     width: 200px;
     height: 40px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     border-radius: 10px;
     font: 400;
     color: white;
@@ -251,6 +251,13 @@ main {
     margin-bottom: 26px;
 }
 
+.product-img h3 {
+    color: #fff;
+    font-size: 50px;
+    text-align: center;
+    padding-top: 50%;
+}
+
 
 .product-box h4 {
     width: 200px;
@@ -265,7 +272,7 @@ main {
 }
 
 .product-box p {
-    padding-top: 50px;
+    padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
 
@@ -280,12 +287,14 @@ footer {
 }
 
 #footer-logo {
+    grid-column: 2/3;
     margin-top: 120px;
     font-size: 30px;
 }
 
 .logo h4 {
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 #main-footer h5 {
