--- a/css/main.css
+++ b/css/main.css
@@ -306,3 +306,18 @@ footer {
 #footer-nav li:last-child {
       margin-right: 0;
 }
+
+.svg-icon {
+      display: inline;
+      grid-column: 11/-1;
+
+      margin-left: 450px;
+}
+
+.svg-icon img{
+      width: 60px;
+      height: 60px;
+
+      margin-left: 40px;
+      margin-top: 100px;
+}
